Phase-0/einbuchen/einbuchen.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: einbuchen-crest-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: einbuchen-crest-depl
      role: backend
      scs: einbuchen
  template:
    metadata:
      labels:
        app: einbuchen-crest-depl
        role: backend
        scs: einbuchen
    spec:
      containers:
      - name: varnish-esi
        image: million12/varnish
        volumeMounts:
        - name: varnish-config-volume
          mountPath: /etc/varnish/
      - name: crest-depl
#        image: lars0395/einbuchen
        image: containerbootcamp/einbuchen
        args:
        - -conf 
        - /etc/config/config.json
        ports:
        - containerPort: 8090
          protocol: TCP
        volumeMounts:
          - name: config-volume-depl
            mountPath: /etc/config
      volumes:
      - name: varnish-config-volume
        configMap:
          name: varnish-for-einbuchen
      - name: config-volume-depl
        emptyDir: {}

---

apiVersion: v1
kind: Service
metadata:
  name: einbuchen-crest-depl
spec:
  ports:
  - port: 8080
    name: web
  selector:
    app: einbuchen-crest-depl
    role: backend
    scs: einbuchen

---

apiVersion: v1
kind: Service
metadata:
  name: einbuchen-intern
spec:
  ports:
  - port: 80
    targetPort: 8090
    name: web
  selector:
    app: einbuchen-crest-depl
    role: backend
    scs: einbuchen
